[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "My steam LeetCode problems solution."
authors = ["Hassan Pouralijan <pouralijan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
